--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,14 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/congratsPageBody.png
+    - assets/images/firstPageBody.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -73,16 +77,15 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Mukta
+      fonts:
+        - asset: assets/fonts/Mukta.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Prompt
+      fonts:
+        - asset: assets/fonts/Prompt.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
