--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc:
+  http:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +64,7 @@ flutter:
   assets:
     - assets/images/congratsPageBody.png
     - assets/images/firstPageBody.png
+    - assets/images/logoRecycle.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
