--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.27.0
+  cloud_firestore: ^4.15.8
+  firebase_auth: ^4.17.8
+  fluttertoast: ^8.2.5
+  google_sign_in: ^6.2.1
+
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +68,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/images/googleIcon.png
     - assets/images/congratsPageBody.png
     - assets/images/firstPageBody.png
     - assets/images/logoRecycle.png
